--- a/quickstarts/ListOp.ipynb
+++ b/quickstarts/ListOp.ipynb
@@ -85,11 +85,11 @@
         "print(\"Exercise 10 Converted to Integer:\", converted_int)\n"
       ],
       "metadata": {
-        "id": "PalGQF0XeKtS",
-        "outputId": "93f74cab-fb13-402f-d326-af0bfb7bc438",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PalGQF0XeKtS",
+        "outputId": "93f74cab-fb13-402f-d326-af0bfb7bc438"
       },
       "execution_count": 10,
       "outputs": [
@@ -157,11 +157,11 @@
         "print(\"Exercise 5 Repeated String:\", repeated_string)\n"
       ],
       "metadata": {
-        "id": "cFcdQhcaoFiT",
-        "outputId": "c5fce28a-70fa-472a-f8b4-8d463a944c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cFcdQhcaoFiT",
+        "outputId": "c5fce28a-70fa-472a-f8b4-8d463a944c3a"
       },
       "execution_count": 11,
       "outputs": [
@@ -190,11 +190,11 @@
         "print (str[5:11])"
       ],
       "metadata": {
-        "id": "dKHHEyuGoXwS",
-        "outputId": "69dfa848-9dfd-4e4b-a3ff-9130edd23dd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dKHHEyuGoXwS",
+        "outputId": "69dfa848-9dfd-4e4b-a3ff-9130edd23dd4"
       },
       "execution_count": 16,
       "outputs": [
@@ -217,11 +217,11 @@
         "print(x == y)"
       ],
       "metadata": {
-        "id": "tL0aqSPSp4Xf",
-        "outputId": "543defce-0dad-454b-d047-91e3ebc4ed7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tL0aqSPSp4Xf",
+        "outputId": "543defce-0dad-454b-d047-91e3ebc4ed7e"
       },
       "execution_count": 19,
       "outputs": [
@@ -245,11 +245,11 @@
         "print(\"my name is %s and my age is %d\" %(name,age))"
       ],
       "metadata": {
-        "id": "L_H3Hg4vdS5e",
-        "outputId": "367082db-5af9-4289-fb00-81d305be3d94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L_H3Hg4vdS5e",
+        "outputId": "367082db-5af9-4289-fb00-81d305be3d94"
       },
       "execution_count": 12,
       "outputs": [
@@ -273,11 +273,11 @@
         "print(f\"Formatted Number: {num1:,}\")"
       ],
       "metadata": {
-        "id": "T4CNJgpOgSeN",
-        "outputId": "038a8b96-d0ec-42b1-c243-c878e67ef335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T4CNJgpOgSeN",
+        "outputId": "038a8b96-d0ec-42b1-c243-c878e67ef335"
       },
       "execution_count": 19,
       "outputs": [
@@ -297,11 +297,11 @@
         "print(f\"{'left':<10}{'center':^10}{'right':>10}\")"
       ],
       "metadata": {
-        "id": "yYd8RGtfhol4",
-        "outputId": "dccf2959-dbbe-454b-b506-4110b0bc618d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yYd8RGtfhol4",
+        "outputId": "dccf2959-dbbe-454b-b506-4110b0bc618d"
       },
       "execution_count": 20,
       "outputs": [
@@ -321,11 +321,11 @@
         "print(\"he said \\\"its a sunny day\\\"\")"
       ],
       "metadata": {
-        "id": "pF62cOvLiFbg",
-        "outputId": "441a0169-8947-41af-9b4e-eda2f457d451",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pF62cOvLiFbg",
+        "outputId": "441a0169-8947-41af-9b4e-eda2f457d451"
       },
       "execution_count": 26,
       "outputs": [
@@ -344,11 +344,11 @@
         "print(\"it has\", 76 , \"methods\")"
       ],
       "metadata": {
-        "id": "e3TqiauWi_OZ",
-        "outputId": "78625207-36d1-4623-d3c0-66d829ab3dbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e3TqiauWi_OZ",
+        "outputId": "78625207-36d1-4623-d3c0-66d829ab3dbf"
       },
       "execution_count": 28,
       "outputs": [
@@ -370,11 +370,11 @@
         "print(type(fruits))"
       ],
       "metadata": {
-        "id": "qB_isWBYjyU1",
-        "outputId": "391abebf-bea0-4b42-a59f-3b42643df0a8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qB_isWBYjyU1",
+        "outputId": "391abebf-bea0-4b42-a59f-3b42643df0a8"
       },
       "execution_count": 31,
       "outputs": [
@@ -395,11 +395,11 @@
         "print(f\"\\\"Hello, {name}! Welcome to Python programming.\\\"\")"
       ],
       "metadata": {
-        "id": "4FRN898bkkpG",
-        "outputId": "a4f042db-d726-433d-c44b-3a754da39603",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4FRN898bkkpG",
+        "outputId": "a4f042db-d726-433d-c44b-3a754da39603"
       },
       "execution_count": 37,
       "outputs": [
@@ -422,11 +422,11 @@
         "print(f\"result is {r:.2f}\")\n"
       ],
       "metadata": {
-        "id": "W53IVNQflNkt",
-        "outputId": "46f6de72-e64a-415d-84f4-305537807af6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W53IVNQflNkt",
+        "outputId": "46f6de72-e64a-415d-84f4-305537807af6"
       },
       "execution_count": 43,
       "outputs": [
@@ -451,11 +451,11 @@
         "print(sentence)"
       ],
       "metadata": {
-        "id": "t_dwO-jqiO9A",
-        "outputId": "1bf02e2c-c1fc-4cda-a2bd-0aa451d0345f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t_dwO-jqiO9A",
+        "outputId": "1bf02e2c-c1fc-4cda-a2bd-0aa451d0345f"
       },
       "execution_count": 44,
       "outputs": [
@@ -476,11 +476,11 @@
         "print(f\"The temp is {celsius:.2f}°C or {fahrenheit:.2f}°F.\")"
       ],
       "metadata": {
-        "id": "1xQBsC6JmY1X",
-        "outputId": "9d6178da-bd34-4801-fc4e-c6aa4d9e856f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1xQBsC6JmY1X",
+        "outputId": "9d6178da-bd34-4801-fc4e-c6aa4d9e856f"
       },
       "execution_count": 45,
       "outputs": [
@@ -512,11 +512,11 @@
         "    )"
       ],
       "metadata": {
-        "id": "1zJj9QsPmjss",
-        "outputId": "8212582b-3028-402e-b45e-0aad3f94921c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1zJj9QsPmjss",
+        "outputId": "8212582b-3028-402e-b45e-0aad3f94921c"
       },
       "execution_count": 48,
       "outputs": [
@@ -543,11 +543,11 @@
         "print(num[0:100:5])"
       ],
       "metadata": {
-        "id": "TS6UXpyfvCc7",
-        "outputId": "1153582b-f148-431d-d4ad-d4d398ba5900",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TS6UXpyfvCc7",
+        "outputId": "1153582b-f148-431d-d4ad-d4d398ba5900"
       },
       "execution_count": 55,
       "outputs": [
@@ -575,11 +575,11 @@
         "print(fruits)\n"
       ],
       "metadata": {
-        "id": "snhTx3dxwH7J",
-        "outputId": "19d90662-cea0-4270-bc58-eb3e5680c23e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "snhTx3dxwH7J",
+        "outputId": "19d90662-cea0-4270-bc58-eb3e5680c23e"
       },
       "execution_count": 64,
       "outputs": [
@@ -600,15 +600,16 @@
       "source": [
         "fruits = (\"banana\", \"Apple\", \"cherry\")\n",
         "print(type(fruits))\n",
-        "fruits.index(\"Orange\")\n"
+        "#cannot append this list\n",
+        "#fruits.index(\"Orange\")\n"
       ],
       "metadata": {
-        "id": "_HGyleymzqRU",
-        "outputId": "097a9a69-5115-4136-d344-ff0a1c47d639",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        }
+        },
+        "id": "_HGyleymzqRU",
+        "outputId": "097a9a69-5115-4136-d344-ff0a1c47d639"
       },
       "execution_count": 67,
       "outputs": [
@@ -644,11 +645,11 @@
         "print(\"Every second car:\", cars[::2])"
       ],
       "metadata": {
-        "id": "nxSePagN0P-g",
-        "outputId": "bf434e79-6245-46ce-b243-914751354085",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nxSePagN0P-g",
+        "outputId": "bf434e79-6245-46ce-b243-914751354085"
       },
       "execution_count": 68,
       "outputs": [
@@ -679,11 +680,11 @@
         "print(\"List after removing an element:\", my_list)"
       ],
       "metadata": {
-        "id": "fXjtVE6j0aIi",
-        "outputId": "967a11cd-5d7a-40e1-db0b-1999202efea3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fXjtVE6j0aIi",
+        "outputId": "967a11cd-5d7a-40e1-db0b-1999202efea3"
       },
       "execution_count": 69,
       "outputs": [
@@ -710,11 +711,11 @@
         "print(f\"Largest: {largest}, Smallest: {smallest}, Sum: {result}\")"
       ],
       "metadata": {
-        "id": "CIMIfI6J0h8U",
-        "outputId": "d33a51b5-2f37-4de2-ced1-2cfe49b255a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CIMIfI6J0h8U",
+        "outputId": "d33a51b5-2f37-4de2-ced1-2cfe49b255a7"
       },
       "execution_count": 70,
       "outputs": [
@@ -736,11 +737,11 @@
         "print(\"List after modification:\", numbers)"
       ],
       "metadata": {
-        "id": "PqjP8uvJ0oVA",
-        "outputId": "ad10e55a-f843-4640-82a6-902e2634b1f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PqjP8uvJ0oVA",
+        "outputId": "ad10e55a-f843-4640-82a6-902e2634b1f0"
       },
       "execution_count": 71,
       "outputs": [
